# barbooks-app

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  README.md  Taskfile.yml  architecture.md  cache-plan.md  docker-compose.yml  eval_models.py  evaluation.md  ingest.py  product-requirements.md  pyproject.toml
app/: admin.py  app.py  llm_service.py  main.py  mock_db.py  page_cache.py  question_patterns.py  scraper.py  spreadsheet_store.py
app/domain/: __init__.py  models.py  ports.py
books/nfl/: NFL Barbook Trivia.xlsx
docs/thoughts/: deployment-security.md  deterministic-qa-plan.md  evaluation.md  product-requirements.md
ingest/: README.md  __init__.py  __main__.py  cli.py
tests/: conftest.py  test_app_formatting.py  test_domain_models.py  test_endpoints.py  test_ingest.py  test_llm_service.py  test_mock_db.py  test_page_cache.py  test_question_patterns.py  test_spreadsheet_store.py
tests/integration/: test_integration.py
